# .files

./: .gitmodules  .pre-commit-config.yaml  README.md  Rprofile  Xmodmap  bash_profile  bashrc  gitconfig  gitignore_global  inputrc  install.conf.yaml  mbsyncrc  pipewire-pulse.sh  taskrc  tmux.conf  vimrc  xinitrc  zshrc
bash/: prompt.bash  settings.bash
coc/: install.sh
config/: flake8  isort.cfg  mimeapps.list  pre-commit-config.yaml  pylintrc  pyproject.toml  tox.ini
config/dunst/: dunstrc
config/f3d/: config.json
config/helix/: config.toml  languages.toml
config/hypr/: exec.conf  hyprland.conf  keybinds.conf  monitors.conf  window_rules.conf
config/mpv/: mpv.conf
config/mpv/scripts/: notify-send.lua
config/mutt/: bindings  brodt  general  gmail  mailcap  muttrc  yandex
config/mypy/: config
config/newsboat/: config  urls
config/nvim/: init.vim
config/nvim/compiler/: python.vim  r.vim  rmd.vim  sh.vim  tex.vim
config/nvim/ftplugin/: python.vim  r.vim  rmd.vim  sh.vim  tex.vim
config/nvim/general/: settings.vim
config/nvim/keys/: mappings.vim
config/nvim/lua/: lsp-config.lua  nvim-cmp.lua  telescope_config.lua  treesitter.lua
config/nvim/plug-config/: coc.vim  fugitive.vim  fzf.vim  lightline.vim  nerdtree.vim  python-syntax.vim  ultisnip.vim  vimwiki.vim
config/nvim/themes/: gruvbox.vim
config/papis/: config
config/qutebrowser/: config.py  quickmarks
config/sxhkd/: sxhkdrc
config/tmux/: tmux.conf
config/youtube-dl/: config
config/yt/: sublist
config/yt-dlp/: config
config/zathura/: zathurarc
fzf/: install.sh
(+46 files in other folders)
