[build-system]
requires = [ "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.isort]
profile = "hug"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88


[tool.pylint.'MESSAGES CONTROL']
disable = ["C0330", "C0326"]

[tool.pylint.format]
max-line-length = 88


[tool.coverage.run]
plugins = ["covdefaults"]


[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py36,pre-commit

[testenv]
deps =
    -rrequirements.txt
    -rrequirements-dev.txt
# Let us make a reports dir using mkdir
whitelist_externals =
    /bin/mkdir
commands =
    coverage erase
    mkdir -p reports/coverage
    coverage run --source=tor4 -m pytest {posargs:tests}
    coverage report --fail-under 80
    coverage html -d reports/coverage

#    mypy --junit-xml reports/mypy/typecheck.xml --cobertura-xml-report reports/mypy --html-report reports/mypy .

[testenv:pre-commit]
skip_install = true
deps = pre-commit
commands = pre-commit run --all-files --show-diff-on-failure
"""
